--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 insightface
-opencv-python
+opencv-python>=4.8.0
 numpy
 onnxruntime>=1.10.0  # Required for insightface
 faiss-cpu>=1.7.0  # Use faiss-gpu for CUDA support
